# kbar

./: Cargo.toml  flake.nix  shell.nix
src/: app.rs  batterywidget.rs  event.rs  hyprlandwidget.rs  main.rs  networkwidget.rs  pipemon.rs  pipewirewidget.rs  ui.rs
src/network/: eventstream.rs  mod.rs  nl80211_stream.rs
