[package]
name = "mbar"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
hyprland = "0.4.0-beta.1"
error = "0.1.9"
chrono = "0.4.41"
battery = "0.7.8"

