[package]
name = "kbar"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
hyprland = "0.4.0-beta.1"
error = "0.1.9"
chrono = "0.4.41"
pipewire = "0.8.0"
libspa = "0.8.0"
neli = { version = "0.7.3", features = ["tokio", "async"] }
neli-proc-macros = "0.2.0"
futures-lite = "2.6.0"
async-stream = "0.3.6"


[profile.dev]
opt-level = 1
